Contact form validation

--- a/src/App.css
+++ b/src/App.css
@@ -35,7 +35,7 @@ a.navbar-brand {
 }
 
 .upper_part {
-	background-image: url(./assets/banner_1.png);
+	background-image: url(./assets/Home/banner_1.png);
 	background-size: cover;
 	background-position: center;
 	background-repeat: no-repeat;
